--- a/lab_6.ipynb
+++ b/lab_6.ipynb
@@ -46,8 +46,7 @@
         " 3. Generate a summary of the dataset for min, max, stddev,\n",
         " quartile vales for 25%,50%,75%,90%,\n",
         " 4. List the names of columns/features in the dataset\n",
-        " 5. Scale the features using StandardScaler and transform the data\n",
-        ""
+        " 5. Scale the features using StandardScaler and transform the data\n"
       ],
       "metadata": {
         "id": "oMNCx1BEJNVg"
@@ -73,7 +72,7 @@
         "id": "1XyhaPOmHg0p",
         "outputId": "0590363c-254d-4202-cf99-34603a4a6ed2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +432,7 @@
         "id": "Yv2TdfPZI_Fo",
         "outputId": "bf683c11-fd17-47ad-c4c0-46e5f09ffdcc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +473,7 @@
         "id": "j1lCPCMQJgS8",
         "outputId": "01d1f42e-9f19-40e9-dec5-e52779deec46"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +891,7 @@
         "id": "wUzU9etwJq6a",
         "outputId": "c7bc8cef-76f9-41c8-ce61-cb7d3940de7e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +918,7 @@
         "id": "61QtAn6aJ1je",
         "outputId": "8f298848-8827-4499-ef36-27129bb6f95c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +957,7 @@
         "id": "HumkDh0eKKPv",
         "outputId": "93e7bca0-c246-42bb-a786-1273d72c0577"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1080,7 +1079,7 @@
       "metadata": {
         "id": "YDN7wg45Kglj"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1092,7 +1091,7 @@
       "metadata": {
         "id": "9HL8bFiBKko5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1109,7 +1108,7 @@
         "id": "CgqYbOJEKnvu",
         "outputId": "0be39424-57ae-400d-eb79-2ea5532badab"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1462,7 +1461,7 @@
       "metadata": {
         "id": "Fv4T-bP_Ky0l"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1480,7 +1479,7 @@
         "id": "vAILrqzeLQq5",
         "outputId": "617bdef7-b7b7-4d68-980d-f6f6abcdcd6a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1505,7 +1504,7 @@
       "metadata": {
         "id": "FdBaFm0wLcXW"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1522,7 +1521,7 @@
         "id": "kgV3hQ3dNRZL",
         "outputId": "4a90d146-1051-4764-85f7-1c64d985e455"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1545,7 @@
         "id": "ti7crVqoNU5d",
         "outputId": "05257e49-f58b-4d82-ba3c-1083c3c982ed"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1577,7 +1576,7 @@
         "id": "lkDyVNjZNaCh",
         "outputId": "d82ec6ea-e677-4fb8-8344-33497e59babc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1603,7 @@
       "metadata": {
         "id": "HRYlqvhcNdfO"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1625,7 +1624,7 @@
         "id": "J8WgbUSrNihS",
         "outputId": "bfe8ab87-69bc-4f6a-ed86-d0c158a91d3b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
